# PGM-Jenius

./: .gitignore  MPC1000_PGM_FORMAT.md  PLAN.md  README.md
PGM-Jenius/: Akaix10.pbm.pgm  README.txt  exportjar.jardesc
PGM-Jenius/packaging/: PGMJenius.bat
PGM-Jenius/src/: PGMJenius.java
PGM-Jenius/src/com/pgmjenius/audio/: AudioWorker.java  LocationRange.java  Marker.java  Markers.java  Sample.java  SamplePlayer.java  Slicer.java
PGM-Jenius/src/com/pgmjenius/gui/: BaseFrame.java  BatchCreateCommand.java  BindingCapable.java  FileDragHandler.java  MainFrame.java  PadListener.java  Preferences.java  ProgramPanel.java  ProgramSamples.java  Utils.java  WaveformPanel.java  Widget.java  WidgetPanel.java
PGM-Jenius/src/com/pgmjenius/midi/: MidiSequenceBuilder.java
PGM-Jenius/src/com/pgmjenius/pgm/: BaseElement.java  Buffer.java  ByteBuffer.java  Element.java  Layer.java  MultisampleBuilder.java  Pad.java  PadEnvelope.java  PadFilter1.java  PadFilter2.java  PadMixer.java  Parameter.java  Profile.java  Program.java  Range.java  RelativeBuffer.java  Sample.java  SampleCommand.java  SampleMatrix.java  Slider.java
PGM-Jenius/src/com/pgmjenius/pgm/command/: ExportCommand.java  ImportCommand.java  MultiSampleCommand.java  SimpleAssignCommand.java
PGM-Jenius/test/com/pgmjenius/audio/: SlicerTest.java
PGM-Jenius/test/com/pgmjenius/gui/: UtilsTest.java
PGM-Jenius/test/com/pgmjenius/pgm/: MultisampleBuilderTest.java  ProgramInOutTest.java  ProgramTest.java  SampleTest.java
PGM-Jenius/test/com/pgmjenius/pgm/command/: ImportCommandTest.java
cpp/: CMakeLists.txt  test_pgm.cpp
cpp/resources/: jjos_128xl_template.pgm
cpp/src/: main.cpp
cpp/src/audio/: AudioPlayer.cpp  AudioPlayer.h  Markers.cpp  Markers.h  Sample.cpp  Sample.h  Slicer.cpp  Slicer.h
cpp/src/gui/: BatchCreatePanel.cpp  BatchCreatePanel.h  ChopSlicesPanel.cpp  ChopSlicesPanel.h  CopySamplesDialog.cpp  CopySamplesDialog.h  FolderAssignPanel.cpp  FolderAssignPanel.h  JJOSInstrumentPanel.cpp  JJOSInstrumentPanel.h  MainWindow.cpp  MainWindow.h  MultisamplePanel.cpp  MultisamplePanel.h  PadButton.cpp  PadButton.h  ParameterWidget.cpp  ParameterWidget.h  ProgramPanel.cpp  ProgramPanel.h  WaveformPanel.cpp  WaveformPanel.h
cpp/src/midi/: MidiSequenceBuilder.cpp  MidiSequenceBuilder.h
cpp/src/pgm/: BaseElement.cpp  BaseElement.h  ByteBuffer.cpp  ByteBuffer.h  Layer.cpp  Layer.h  MultisampleBuilder.cpp  MultisampleBuilder.h  Pad.cpp  Pad.h  PadEnvelope.cpp  PadEnvelope.h  PadFilter.cpp  PadFilter.h  PadMixer.cpp  PadMixer.h  Parameter.cpp  Parameter.h  Profile.h  Program.cpp  Program.h  Range.h  Slider.cpp  Slider.h
